# ml-course1

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  webpack.config.js
commons/: Cargo.toml
commons/src/: geometry.rs  lib.rs  math.rs  network.rs  utils.rs
commons/src/math/: lerp.rs
data/: samples.json
data/dataset/: features.json  ignore.json  minMax.json  samples.json  testing.csv  testing.json  testing_features.json  training.csv  training.json  training_features.json
data/dataset/json/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+5688 more)
data_set/: Cargo.toml
data_set/src/: analytics.rs  data.rs  draw.rs  file_utils.rs  main.rs
data_set/src/analytics/: custom_knn.rs  knn.rs
demo_chart/: Cargo.toml  README.md  index.html  package-lock.json
demo_chart/public/css/: styles.css
demo_chart/src/: app_state.rs  canvas.rs  draw.rs  html.rs  html_draw.rs  lib.rs  subscribe_state.rs
demo_chat/: Cargo.toml  index.html  webpack.config.js
drawer/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
drawer/public/css/: styles.css
drawer/src/: app_state.rs  draw.rs  geometry.rs  html.rs  html_state.rs  lib.rs  subscribe_html.rs  subscribe_state.rs
drawing_commons/: Cargo.toml
drawing_commons/src/: array.rs  canvas_ext.rs  data.rs  draw_images.rs  knn_classifier.rs  lib.rs  models.rs  sketch_pad.rs  ui.rs  utils.rs
drawing_commons/src/classifiers/: knn.rs
image_recognition/: Cargo.toml  README.md  index.html
image_recognition/src/: html.rs  html_draw.rs  subscribe_state.rs
linear_interpolation/: Cargo.toml  index.html  package-lock.json
linear_interpolation/src/: app_state.rs  app_state_draw.rs  draw.rs  html.rs  html_draw.rs  lib.rs  subscribe_state.rs
public/css/: styles.css
segment_intersection/: Cargo.toml  index.html  package-lock.json
segment_intersection/src/: app_state_draw.rs  html.rs  html_draw.rs
self_driving_car/: Cargo.toml  README.md  index.html  package.json
self_driving_car/public/css/: styles.css
self_driving_car/src/: app_state.rs  car.rs  controls.rs  html.rs  html_draw.rs  lib.rs  road.rs  sensor.rs  storage.rs  subscribe_state.rs  visualizer.rs
src/: app.rs  app_state.rs  canvas.rs  draw.rs  geometry.rs  html.rs  html_state.rs  lib.rs  subscribe_html.rs  subscribe_state.rs
trigonometry/: Cargo.toml  index.html
trigonometry/src/: app_state.rs  app_state_draw.rs  canvas.rs  canvas_chart.rs  canvas_graphic.rs  chart_canvas.rs  draw.rs  html.rs  html_draw.rs  lib.rs  subscribe_state.rs
vectors/: Cargo.toml  index.html  package-lock.json
vectors/src/: app_state.rs  canvas.rs  html.rs  html_draw.rs  lib.rs  subscribe_state.rs  vector.rs
viewer/: Cargo.toml  README.md  index.html  package-lock.json
viewer/public/css/: styles.css
viewer/src/: confusion.rs  data_cleaner.rs  drawing_analyzer.rs  html.rs  html_draw.rs  images.rs  lib.rs  models.rs  sketch_pad.rs
web_commons/: Cargo.toml
web_commons/src/: animations.rs  chart.rs  chart_models.rs  document.rs  geometry.rs  graphics.rs  html.rs  lib.rs  subscribers.rs
