[package]
name = "data_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cairo = "0.0.4"
#raqote = "0.8.2"
image = "0.24.6"
imageproc = "0.23.0"
itertools = "0.10.5"

commons = { path = "../commons" }
const_format = "0.2.26"
drawing_commons = { path = "../drawing_commons" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"