[package]
name = "data_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
drawing_commons = { path = "../drawing_commons" }
raqote = "0.8.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
termion = "2.0.1"
wasm-bindgen = "0.2.87"