[package]
name = "data_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
csv = "1.1"
drawing_commons = { path = "../drawing_commons" }
linfa-nn = "0.6.1" # TODO delete?
ndarray = "0.15.6" # TODO delete?
image = "0.24.1" # TODO delete?
imageproc = "0.23.0" # TODO delete?
lazy_static = "1.4.0"
raqote = "0.8.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
termion = "2.0.1" # TODO delete?
wasm-bindgen = "0.2.87"