[package]
name = "drawing_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
const_format = "0.2.26"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'HtmlImageElement',
    'MouseEvent',
]