[package]
name = "drawing_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
const_format = "0.2.26"
js-sys = "0.3.64"
itertools = "0.10.5"
lazy_static = "1.4.0"
raqote = "0.8.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
web_commons = { path = "../web_commons" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'HtmlButtonElement',
    'HtmlImageElement',
    'MouseEvent',
]