[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
commons = { path = "../commons" }
drawing_commons = { path = "../drawing_commons" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
itertools = "0.10.5"
lazy_static = "1.4.0"
palette = "0.7.2"
plotly = "0.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
web_commons = { path = "../web_commons" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CanvasGradient',
    'DomTokenList',
    'Document',
    'HtmlCanvasElement',
    'HtmlCollection',
    'HtmlScriptElement',
    'ScrollBehavior',
    'ScrollIntoViewOptions',
    'ScrollLogicalPosition',
    'Window',
]
